--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,7 @@
 /*Selection*/
+p::-moz-selection, h1::-moz-selection, h2::-moz-selection, h3::-moz-selection, h4::-moz-selection, h5::-moz-selection, h6::-moz-selection, a::-moz-selection, span::-moz-selection {
+    background-color: #DFE3E8;
+}
 p::selection, h1::selection, h2::selection, h3::selection, h4::selection, h5::selection, h6::selection, a::selection, span::selection {
     background-color: #DFE3E8;
 }
@@ -23,8 +26,10 @@ header {
     width: 100%;
    /* background-color: #fff;*/
     z-index: 2;
+    -webkit-transition: all;
     transition: all;
-    transition-duration: 2s;
+    -webkit-transition-duration: 2s;
+            transition-duration: 2s;
     position: fixed;
     background-color: transparent;
     top: 0;
@@ -45,40 +50,62 @@ header > nav {
     max-width: 1300px;
     margin: 0 auto;
     width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-around;
-    flex-direction: row;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
     box-sizing: border-box;
     /*padding: 20px 0;*/
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-transition: all;
     transition: all; 
-    transition-duration: 1s;
+    -webkit-transition-duration: 1s; 
+            transition-duration: 1s;
 }
 .menu {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-around;
-    flex-direction: row;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
     max-width: 600px;
     width: 100%;
 }
 .menu li a {
     font-family: 'Montserrat', sans-serif;
     font-size: 15px;
+    -webkit-transition: all;
     transition: all;
-    transition-duration: 0.5s;
+    -webkit-transition-duration: 0.5s;
+            transition-duration: 0.5s;
 }
 #logo {
     font-family: 'Roboto', sans-serif;
     font-weight: 900;
     font-size: 23px;
     letter-spacing: 1px;
+    -webkit-transition: all;
     transition: all;
-    transition-duration: 0.5s;
+    -webkit-transition-duration: 0.5s;
+            transition-duration: 0.5s;
 }
 .background-header {
     background-color: transparent;
+    -webkit-transition: all;
     transition: all;
-    transition-duration: 2s;
+    -webkit-transition-duration: 2s;
+            transition-duration: 2s;
 }
 header > nav > a, .menu li a {
     text-decoration: none;
@@ -105,7 +132,8 @@ header > nav > a, .menu li a {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
 }
 .photo-text {
     margin: 0 auto;
@@ -143,11 +171,16 @@ header > nav > a, .menu li a {
     padding: 15px 32px;
     border-radius: 30px;
     text-transform: uppercase;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+                -ms-grid-row-align: center;
+            align-items: center;
     margin-top: 30px;
     font-weight: 600;
+    -webkit-transition: all;
     transition: all;
-    transition-duration: 1s;
+    -webkit-transition-duration: 1s;
+            transition-duration: 1s;
 }
 .photo-text a:hover {
     background-color: #fff;
@@ -164,11 +197,19 @@ header > nav > a, .menu li a {
     max-width: 1200px;
     width: 100%;
     margin: 0  auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-around;
-    flex-direction: row;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
     padding: 100px 0;
-    align-items: flex-start;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
     box-sizing: border-box;
 }
 .photo-about {
@@ -181,7 +222,10 @@ header > nav > a, .menu li a {
 .text-about {
     max-width: 45%;
     width: 100%;
-    align-items: flex-start;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+                -ms-grid-row-align: flex-start;
+            align-items: flex-start;
     color: #212529;
 }
 .text-about h2 > span {
@@ -249,11 +293,18 @@ header > nav > a, .menu li a {
     line-height: 24px;
 }
 .services {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-around;
-    flex-direction: row;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
     width: 100%;
-    flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
     margin: 100px 0;
 }
 .services > article {
@@ -261,7 +312,10 @@ header > nav > a, .menu li a {
     width: 30%;
     box-sizing: border-box;
     margin-bottom: 30px;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+                -ms-grid-row-align: center;
+            align-items: center;
     border: 1px solid #e8e8e8;
     border-radius: 10px;
 }
@@ -287,6 +341,7 @@ header > nav > a, .menu li a {
     height: 2px;
     background-color: #E65F78;
     margin: 24px auto;
+    -webkit-transition: all 0.5s;
     transition: all 0.5s;
 }
 .services > article:hover .line {
@@ -303,7 +358,10 @@ header > nav > a, .menu li a {
     width: 100%;
     margin: 0 auto;
     padding: 100px 0;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+                -ms-grid-row-align: center;
+            align-items: center;
 }
 .reviews-title {
     text-align: center;
@@ -336,10 +394,19 @@ header > nav > a, .menu li a {
     margin-bottom: 30px;
 }
 .reviews-wrapper article {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 .reviews-wrapper article i:first-child {
     font-size: 40px;
@@ -371,10 +438,19 @@ header > nav > a, .menu li a {
     max-width: 100px;
     width: 100%;
     margin: 0 auto;
+    display: -webkit-box !important;
+    display: -ms-flexbox !important;
     display: flex !important;
-    justify-content: space-between;
-    flex-direction: row;
-    align-items:center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-align:center;
+        -ms-flex-align:center;
+            align-items:center;
 }
 .owl-nav.disabled span {
     font-size: 60px;
@@ -416,14 +492,24 @@ header > nav > a, .menu li a {
 }
 
 #works {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
 }
 .grid .grid-item {
     width: 33.333333%;
     box-sizing: border-box;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+                -ms-grid-row-align: center;
+            align-items: center;
     text-align: center;
     padding: 10px;
     /*margin-bottom: 24px;*/
@@ -438,10 +524,18 @@ header > nav > a, .menu li a {
     max-width: 600px;
     text-align: center;
     margin: 60px auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
-    flex-direction: row;
-    flex-wrap: wrap;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
 }
 .buttons-wrapper button {
     border: none;
@@ -451,8 +545,10 @@ header > nav > a, .menu li a {
     text-transform: uppercase;
     cursor: pointer;
     font-weight: 500;
+    -webkit-transition: all;
     transition: all;
-    transition-duration: 1s;
+    -webkit-transition-duration: 1s;
+            transition-duration: 1s;
     padding: 10px 20px;
     border-radius: 20px;
     box-sizing: border-box;
@@ -474,7 +570,9 @@ header > nav > a, .menu li a {
     border: none;
 }
 .table-of-contents a {
-    transition-duration: 1s;
+    -webkit-transition-duration: 1s;
+            transition-duration: 1s;
+    -webkit-transition: all;
     transition: all;
 }
 /*Works*/
@@ -544,9 +642,20 @@ header > nav > a, .menu li a {
     outline: none;
     border: 2px solid #e0e0e0;
     border-radius: 5px;
+    -webkit-transition: all;
     transition: all;
-    transition-duration: 0.5s;
+    -webkit-transition-duration: 0.5s;
+            transition-duration: 0.5s;
     font-family: 'Monteserrat', sans-serif;
+    color: #6c757d;
+}
+.contacts-wrapper input::-webkit-input-placeholder {
+    color: #6c757d;
+}
+.contacts-wrapper input::-moz-placeholder {
+    color: #6c757d;
+}
+.contacts-wrapper input:-ms-input-placeholder {
     color: #6c757d;
 }
 .contacts-wrapper input::placeholder {
@@ -565,13 +674,17 @@ header > nav > a, .menu li a {
     outline: none;
     border: 2px solid #e0e0e0;
     border-radius: 5px;
+    -webkit-transition: all;
     transition: all;
-    transition-duration: 0.5s;
+    -webkit-transition-duration: 0.5s;
+            transition-duration: 0.5s;
 }
 .contacts-wrapper form > textarea {
     padding: 15px 10px;
+    -webkit-transition: all;
     transition: all;
-    transition-duration: 0.5s;
+    -webkit-transition-duration: 0.5s;
+            transition-duration: 0.5s;
     resize: vertical;
     font-family: 'Monteserrat', sans-serif;
     color: #6c757d;
@@ -584,6 +697,15 @@ form label.error {
     font-family: 'Monteserrat', sans-serif;
     font-weight: bold;
     color: #e97288;
+}
+.contacts-wrapper form > textarea::-webkit-input-placeholder {
+    color: #6c757d;
+}
+.contacts-wrapper form > textarea::-moz-placeholder {
+    color: #6c757d;
+}
+.contacts-wrapper form > textarea:-ms-input-placeholder {
+    color: #6c757d;
 }
 .contacts-wrapper form > textarea::placeholder {
     color: #6c757d;
@@ -605,8 +727,10 @@ form label.error {
     text-transform: uppercase;
     color: #fff;
     cursor: pointer;
+    -webkit-transition: all;
     transition: all;
-    transition-duration: 1s;
+    -webkit-transition-duration: 1s;
+            transition-duration: 1s;
     border: 2px solid transparent;
 }
 .contacts-wrapper form > input[type="submit"]:hover {
@@ -637,20 +761,31 @@ footer {
 .top-wrapper {
     width: 40px !important;
     height: 40px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     background-color: #e65f78;
     border-radius: 5px;
     position: fixed;
     z-index: 11;
     bottom: 50px;
     right: 50px;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     text-align: center;
     display: none;
+    -webkit-transition: all;
     transition: all;
-    transition-duration: 1s;
+    -webkit-transition-duration: 1s;
+            transition-duration: 1s;
 }
 .top-wrapper > a {
     text-decoration: none;
@@ -675,10 +810,19 @@ footer {
 }
 @media all and (max-width: 990px) {
     .about-wrapper {
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
     }
     .photo-wrapper {
         background-position: 60% 30%;
@@ -731,8 +875,13 @@ footer {
 }
 @media all and (max-width: 470px) {
     .buttons-wrapper {
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        flex-direction: column;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
     }
     .buttons-wrapper button:focus {
         background: none;
